@@ -21,7 +21,8 @@ Core and Builtins
   values.  Also fix a number of bugs in dtoa.c that could lead to
   incorrectly rounded results when converting strings to floats.
 
-- Issue #7319: Silence DeprecationWarning by default.
+- Issue #7319, #7770: Silence DeprecationWarning by default when -3 is not
+  used.
 
 - Issue #2335: Backport set literals syntax from Python 3.x.
 
